--- a/src/just-il/just-il.Web/packages.config
+++ b/src/just-il/just-il.Web/packages.config
@@ -22,10 +22,14 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.3" targetFramework="net452" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.2" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
@@ -34,6 +38,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net452" />
   <package id="MiniProfiler" version="2.1.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
@@ -44,10 +49,13 @@
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
+  <package id="System.Spatial" version="5.8.3" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
   <package id="Umbraco.ModelsBuilder" version="3.0.10" targetFramework="net452" />
   <package id="UmbracoCms" version="7.12.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.12.0" targetFramework="net452" />
+  <package id="UmbracoFileSystemProviders.Azure" version="1.0.3" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="8.7.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
