--- a/src/just-il/package.json
+++ b/src/just-il/package.json
@@ -1,24 +1,42 @@
 {
-  "name": "effera-umbsp",
+  "name": "justil-web",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "",
   "devDependencies": {
-    "del": "^2.2.1",
-    "fs": "0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-bower": "0.0.13",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "merge-stream": "^1.0.1",
-    "path": "^0.12.7",
-    "run-sequence": "^2.1.0"
+    "del": "5.0.0",
+    "fs": "0.0.2",
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.1",
+    "gulp-imagemin": "6.0.0",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-uglify": "3.0.2",
+    "gulp-util": "3.0.8",
+    "merge-stream": "2.0.0",
+    "path": "0.12.7",
+    "run-sequence": "2.2.1"
   },
-  "author": "effera",
-  "license": "ISC"
+  "author": "igniztion",
+  "dependencies": {
+    "@bower_components/bootstrap-sass": "twbs/bootstrap-sass#~3.3.7",
+    "@bower_components/desandro-matches-selector": "desandro/matches-selector#^2.0.0",
+    "@bower_components/ev-emitter": "metafizzy/ev-emitter#^1.0.0",
+    "@bower_components/fizzy-ui-utils": "metafizzy/fizzy-ui-utils#^2.0.0",
+    "@bower_components/get-size": "desandro/get-size#^2.0.2",
+    "@bower_components/imagesloaded": "desandro/imagesloaded#*",
+    "@bower_components/jquery": "jquery/jquery-dist#~1",
+    "@bower_components/jquery-lazy": "eisbehr-/jquery.lazy#*",
+    "@bower_components/masonry": "desandro/masonry#*",
+    "@bower_components/outlayer": "metafizzy/outlayer#^2.1.0",
+    "@bower_components/slick-carousel": "kenwheeler/slick#~1.4.1",
+    "@bower_components/slick-lightbox": "mreq/slick-lightbox#*"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
+  },
+  "scripts": {
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
+  }
 }
