--- a/src/just-il/just-il.Web/just-il.Web.csproj
+++ b/src/just-il/just-il.Web/just-il.Web.csproj
@@ -442,7 +442,6 @@
     <Content Include="Views\Partials\Grid\Bootstrap3-Fluid.cshtml" />
     <Content Include="Views\Partials\Grid\Bootstrap2.cshtml" />
     <Content Include="Views\Partials\Grid\Bootstrap2-Fluid.cshtml" />
-    <Content Include="Media\Web.config" />
     <Content Include="Views\Partials\_PageHero.cshtml" />
     <Content Include="Views\Partials\_PageOpenGraphTags.cshtml" />
     <Content Include="Content\Sass\_gallery.scss" />
@@ -549,6 +548,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Models\" />
+    <Folder Include="Media\" />
     <Folder Include="Static\img\" />
   </ItemGroup>
   <PropertyGroup>
