Remove connection string from web.config

--- a/src/just-il/just-il.Web/Web.config
+++ b/src/just-il/just-il.Web/Web.config
@@ -56,7 +56,7 @@
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="Dll" />
   </appSettings>
   <!-- Defer connectionStrings to separate (git untracked) file to simplify db-setup in different environments -->
-  <connectionStrings configSource="connectionStrings.local.config" />
+  <!--<connectionStrings configSource="connectionStrings.local.config" />-->
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SqlServerCe.4.0" />
