--- a/src/just-il/just-il.Web/config/FileSystemProviders.config
+++ b/src/just-il/just-il.Web/config/FileSystemProviders.config
@@ -5,8 +5,8 @@
   <Provider alias="media" type="Our.Umbraco.FileSystemProviders.Azure.AzureBlobFileSystem, Our.Umbraco.FileSystemProviders.Azure">
   	<Parameters>
   		<add key="containerName" value="media"/>
-  		<add key="rootUrl" value="http://[myAccountName].blob.core.windows.net/"/>
-  		<add key="connectionString" value="DefaultEndpointsProtocol=https;AccountName=[myAccountName];AccountKey=[myAccountKey]"/>
+  		<add key="rootUrl" value="#{justil-storageUrl}#"/>
+  		<add key="connectionString" value="#{justil-storageConnString}#"/>
   		<!--
         Optional configuration value determining the maximum number of days to cache items in the browser.
         Defaults to 365 days.
