--- a/src/just-il/just-il.Web/config/FileSystemProviders.config
+++ b/src/just-il/just-il.Web/config/FileSystemProviders.config
@@ -20,7 +20,7 @@
   		<!--
         When true blob containers will be private instead of public what means that you can't access the original blob file directly from its blob url.
       -->
-  		<add key="usePrivateContainer" value="false"/>
+  		<add key="usePrivateContainer" value="true"/>
   	</Parameters>
   </Provider>
    
