--- a/src/just-il/just-il.Web/Web.config
+++ b/src/just-il/just-il.Web/Web.config
@@ -445,4 +445,12 @@
       </handlers>
     </system.webServer>
   </location>
+  <location path="css">
+    <system.webServer>
+      <handlers>
+        <remove name="StaticFileHandler" />
+        <add name="StaticFileHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.StaticFileHandler" />
+      </handlers>
+    </system.webServer>
+  </location>
 </configuration>
