--- a/src/just-il/just-il.Web/Web.config
+++ b/src/just-il/just-il.Web/Web.config
@@ -30,7 +30,17 @@
   <clientDependency configSource="config\ClientDependency.config" />
   <Examine configSource="config\ExamineSettings.config" />
   <ExamineLuceneIndexSets configSource="config\ExamineIndex.config" />
-  <log4net configSource="config\log4net.config" />
+  <log4net configSource="config\log4net.config">
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="aiAppender" />
+    </root>
+    <appender name="aiAppender" type="Microsoft.ApplicationInsights.Log4NetAppender.ApplicationInsightsAppender, Microsoft.ApplicationInsights.Log4NetAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+  </log4net>
   <appSettings>
     <!--
       Umbraco web.config configuration documentation can be found here:
@@ -97,6 +107,8 @@
       <add name="UmbracoModule" type="Umbraco.Web.UmbracoModule,umbraco" />
       <add name="ImageProcessorModule" type="ImageProcessor.Web.HttpModules.ImageProcessingModule, ImageProcessor.Web" />
       <add name="ClientDependencyModule" type="ClientDependency.Core.Module.ClientDependencyModule, ClientDependency.Core" />
+      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <httpHandlers>
       <remove verb="*" path="*.asmx" />
@@ -263,6 +275,10 @@
       <remove name="WebDAVModule" />
       <remove name="ClientDependencyModule" />
       <add name="ClientDependencyModule" type="ClientDependency.Core.Module.ClientDependencyModule, ClientDependency.Core" />
+      <remove name="TelemetryCorrelationHttpModule" />
+      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <handlers accessPolicy="Read, Write, Script, Execute">
       <remove name="WebServiceHandlerFactory-Integrated" />
@@ -419,6 +435,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Azure.KeyVault.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.10.0.0" newVersion="2.10.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
