Fix automatic changes to web.config

--- a/src/just-il/just-il.Web/config/log4net.config
+++ b/src/just-il/just-il.Web/config/log4net.config
@@ -2,9 +2,15 @@
 <log4net>
   
   <root>
-    <priority value="Info"/>
+    <priority value="WARN"/>
     <appender-ref ref="AsynchronousLog4NetAppender" />
   </root>
+
+  <appender name="aiAppender" type="Microsoft.ApplicationInsights.Log4NetAppender.ApplicationInsightsAppender, Microsoft.ApplicationInsights.Log4NetAppender">
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%-5level %logger - %message%newline" />
+    </layout>
+  </appender>
 
   <appender name="rollingFile" type="log4net.Appender.RollingFileAppender">
 	  <file type="log4net.Util.PatternString" value="App_Data\Logs\UmbracoTraceLog.%property{log4net:HostName}.txt" />
@@ -19,7 +25,7 @@
   </appender>
 
   <appender name="AsynchronousLog4NetAppender" type="Log4Net.Async.ParallelForwardingAppender,Log4Net.Async">
-    <appender-ref ref="rollingFile" />
+    <appender-ref ref="aiAppender" />
   </appender>
 
   <!--Here you can change the way logging works for certain namespaces  -->
