Add separate azure configs. Adjust some styles

--- a/src/just-il/just-il.Web/Web.Release.config
+++ b/src/just-il/just-il.Web/Web.Release.config
@@ -28,5 +28,12 @@
       </customErrors>
     -->
   </system.web>
+  <umbracoConfiguration>
+    <FileSystemProviders configSource="config\FileSystemProviders.azure.config" xdt:Transform="Replace" />
+  </umbracoConfiguration>
   <connectionStrings xdt:Transform="Remove" />
+  <imageProcessor>
+    <security configSource="config\imageprocessor\security.azure.config" xdt:Transform="Replace" />
+    <caching configSource="config\imageprocessor\cache.azure.config" xdt:Transform="Replace"/>
+  </imageProcessor>
 </configuration>
