--- a/src/just-il/just-il.Web/config/imageprocessor/security.azure.config
+++ b/src/just-il/just-il.Web/config/imageprocessor/security.azure.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <security>
   <services>
-    <service name="LocalFileImageService" type="ImageProcessor.Web.Services.LocalFileImageService, ImageProcessor.Web" />
     <service prefix="remote.axd" name="RemoteImageService" type="ImageProcessor.Web.Services.RemoteImageService, ImageProcessor.Web">
       <settings>
         <setting key="MaxBytes" value="4194304" />
@@ -10,6 +9,13 @@
       </settings>
       <whitelist>
       </whitelist>
+    </service>
+  <service name="AzureImageService" prefix="media/" type="ImageProcessor.Web.Plugins.AzureBlobCache.AzureImageService, ImageProcessor.Web.Plugins.AzureBlobCache">
+      <settings>
+        <setting key="StorageAccount" value="#{justil-storageConnString}#" />
+        <setting key="Container" value="media" />
+        <setting key="AccessType" value="Blob" />
+      </settings>
     </service>
   </services>
 </security>
