--- a/src/just-il/just-il.Web/config/imageprocessor/cache.config
+++ b/src/just-il/just-il.Web/config/imageprocessor/cache.config
@@ -1,22 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<caching currentCache="AzureBlobCache">
+<caching currentCache="DiskCache">
   <caches>
     <cache trimCache="false" name="DiskCache" type="ImageProcessor.Web.Caching.DiskCache, ImageProcessor.Web" maxDays="365" memoryMaxMinutes="1"
       browserMaxDays="7">
       
-    <settings>
-        <setting key="VirtualCachePath" value="~/app_data/cache"/>
-      </settings></cache>
-  <cache name="AzureBlobCache" type="ImageProcessor.Web.Plugins.AzureBlobCache.AzureBlobCache, ImageProcessor.Web.Plugins.AzureBlobCache" maxDays="365">
       <settings>
-        <setting key="CachedStorageAccount" value="#{justil-storageConnString}#"/>
-        <setting key="CachedBlobContainer" value="cache"/>
-        <setting key="UseCachedContainerInUrl" value="true"/>
-        <setting key="CachedCDNRoot" value="https://justil.azureedge.net"/>
-        <setting key="CachedCDNTimeout" value="1000"/>
-        <setting key="SourceStorageAccount" value="#{justil-storageConnString}#"/>
-        <setting key="SourceBlobContainer" value="media"/>
-        <setting key="StreamCachedImage" value="false"/>
+        <setting key="VirtualCachePath" value="~/app_data/cache"/>
       </settings>
-    </cache></caches>
+    </cache>
+  </caches>
 </caching>
